added build for dmg and exe